# fast-api-template

./: Makefile  README.md  docker-compose.override.yml  docker-compose.yml
backend/: .dockerignore  .env  .env.template  .flake8.ini  .mypy.ini  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/application/common/: container.py
backend/application/web/: exceptions.py  logging.py  main.py  middlewares.py  routers.py
backend/application/web/product/: api.py  exceptions.py  schemas.py
backend/common/: config.py  container.py
backend/domain/: base.py
backend/domain/product/: exceptions.py  repos.py  use_cases.py
backend/repository/database/: base.py  database.py
backend/repository/database/migrations/: env.py
backend/repository/database/migrations/versions/: 7fb98545f32f_product_init.py
backend/repository/product/: product_db_repo.py
